src/html/organisms/experience.scss
.organisms__experience {
  --atoms--grid-columns: 2;
  --atoms--grid-columns--print: 1;

  .organisms__experience__section-header {
    font-size: 1.5em;
  }
}

.printer-friendly-version:not(:target) .organisms__experience {
  .organisms__experience__section-header,
  .organisms__experience__summary {
    text-align: center;
    animation: invisible 1.5s,
      fade-in 0.4s ease-out 1.5s;
  }
}
.printer-friendly-version:target .organisms__experience {
  .organisms__experience__section-header {
    border-bottom: 2px solid var(--color-primary);
  }

  .organisms__experience__experiences,
  .organisms__experience__summary {
    margin-left: 16px;
  }

  .organisms__experience__summary {
    margin-bottom: 16px;
  }
}

